# portfolio-management-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  TODOS.md  pyproject.toml  requirements.txt
artifacts/: backtest_summary.json  backtest_summary.txt  phase1_regression.json  phase2a_regression.json  phase2b_regression.json  phase3b_regression.json  portfolio_returns.json  stage1_audit_2026-05-15.json  stage1_audit_2026-05-15_fixed.json  stage1_audit_2026-05-15_post_fix.json
cli/: main.py
data/: playbook_calibration.json  universe.json
docs/: 2026-05-28-pr2a-factor-taxonomy-redesign-idea.md  DB_GAPS_Investment_Tournament_Rules.md  Factor_Model_Gemini_DeepResearch  GAPS_ETF_버킷분류_14.xlsx  architecture-review-2026-05-24.md  db-gaps-prerequisites.md  db-gaps-test-plan.md  followup_issues.md  pipeline-audit-2026-06-15.md  rebalancing-method.md  stage1. macro_news.md  stage1. macro_quant.md  stage1. market_risk.md  stage1. technical.md  stage1_audit.md  stage2. research.md  stage2_audit.md  stage3-implementation-summary.md  stage3. allocator.md  stage3_audit.md  stage4. risk_overlay.md  stage4_audit.md  stage5. mandate_validator.md  stage5_6_audit.md  stage6. portfolio_manager.md  수정 계획.txt  제12회 GAPS ETF 리스트 (2026-5-9 게시).xlsx
pre_c10_backup/: trade_plan.csv
presets/: db_gaps.yaml  triggers_default.yaml
prompts/: asset-allocation.md  macro-analysis.md  news-impact.md  risk-analysis.md
scripts/: anchor_eval.py  anchor_eval_live.py  audit_stage1_freshness.py  backtest_bl_calibration.py  backtest_bl_gate2.py  backtest_candidate_selection.py  backtest_etf_selection.py  calibrate_factor_model.py  calibrate_factor_model_8b.py  calibrate_playbooks.py  check_stage1_data.py  compute_portfolio_returns.py  diagnose_2026_06_01_infeasibility.py  enrich_universe_gaps_bucket.py  enrich_universe_subcategory.py  fetch_save_brief.py  generate_historical_factor_z.py  generate_monthly_report.py  generate_samples_8b.py  integration_full_pipeline_check.py  measure_llm_variance.py  measure_stage2_ablation.py  measure_stepA_input_sensitivity.py  (+14 more)
(+982 files in other folders)
