[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.4"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    "pykrx>=1.0.45",
    "pyportfolioopt>=1.5.5",
    "pandas-ta>=0.3.14b",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pyarrow>=14.0.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "langsmith>=0.1.0",
    "fredapi>=0.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]
save-brief = [
    "playwright>=1.48.0",
    "pymupdf>=1.24.0",
    "openai>=1.40.0",
]

[project.scripts]
gaps = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
    "slow: long-running E2E integration test",
    "eval: LLM quality eval, requires API access; skip in CI",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
